tests/Project1/test/type_A_error2.out
Error type A at Line 2: unknown lexeme 0x123p
