tests/Project1/test/type_A_error2.spl
int main() {
    float x = 0x123p+3;
    return 0;
}
